src/mflibrary/mfFindExpressions/mfslParser.output
Grammar

    0 $accept: Script $end

    1 $@1: ε

    2 $@2: ε

    3 Script: Service Input $@1 OptionalScriptElementsSeq $@2 OptionalSelectStatements

    4 Number: "integer number"
    5       | "double number"

    6 SingleString: "single quoted_string"
    7             | "double quoted_string"

    8 String: SingleString
    9       | String SingleString

   10 Service: "service" ":" "name" ";"

   11 Input: "input" ":" InputSourcesSeq ";"

   12 InputSourcesSeq: InputSource
   13                | InputSourcesSeq "&" InputSource

   14 InputSource: "name"
   15            | String

   16 OptionalScriptElementsSeq: ScriptElementsSeq
   17                          | ε

   18 ScriptElementsSeq: ScriptElement
   19                  | ScriptElementsSeq ScriptElement

   20 ScriptElement: Option
   21              | ChoiceDeclaration
   22              | CaseChoiceStatement
   23              | CaseInputStatement

   24 Option: "option"
   25       | "option" OptionValue

   26 OptionValue: "name"
   27            | Number
   28            | String
   29            | "name" "=" "name"
   30            | "name" ":" "name"
   31            | "name" "=" Number
   32            | "name" ":" Number

   33 $@3: ε

   34 $@4: ε

   35 ChoiceDeclaration: "choice" "name" ":" $@3 ChoiceLabels "," "default" ":" "name" $@4 ";"

   36 ChoiceLabels: "name"
   37             | ChoiceLabels "|" "name"

   38 CaseChoiceLabel: "name"

   39 CaseChoiceLabelsSeq: CaseChoiceLabel
   40                    | CaseChoiceLabelsSeq "," CaseChoiceLabel

   41 $@5: ε

   42 CaseChoiceStatement: "case" "name" ":" $@5 OptionalCaseChoiceAlternativesSeq ";"

   43 OptionalCaseChoiceAlternativesSeq: CaseChoiceAlternativesSeq
   44                                  | ε

   45 CaseChoiceAlternativesSeq: CaseChoiceAlternative
   46                          | CaseChoiceAlternativesSeq CaseChoiceAlternative

   47 $@6: ε

   48 $@7: ε

   49 CaseChoiceAlternative: $@6 CaseChoiceLabelsSeq ":" $@7 OptionalScriptElementsSeq ";"

   50 CaseInputName: "name"

   51 CaseInputNamesSeq: CaseInputName
   52                  | CaseInputNamesSeq "," CaseInputName

   53 $@8: ε

   54 CaseInputStatement: "case" "input" ":" $@8 OptionalCaseInputAlternativesSeq ";"

   55 OptionalCaseInputAlternativesSeq: CaseInputAlternativesSeq
   56                                 | ε

   57 CaseInputAlternativesSeq: CaseInputAlternative
   58                         | CaseInputAlternativesSeq CaseInputAlternative

   59 $@9: ε

   60 $@10: ε

   61 CaseInputAlternative: $@9 CaseInputNamesSeq ":" $@10 OptionalScriptElementsSeq ";"

   62 OptionalSelectStatements: SelectStatementSeq
   63                         | ε

   64 SelectStatementSeq: SelectStatement
   65                   | SelectStatementSeq SelectStatement

   66 LabelName: "name"
   67          | "all"

   68 SelectStatement: "select" "name" ":" LabelName ";"


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    "|" (258) 37
    "&" (259) 13
    "=" (260) 29 31
    ";" (261) 10 11 35 42 49 54 61 68
    ":" (262) 10 11 30 32 35 42 49 54 61 68
    "," (263) 35 40 52
    "service" (264) 10
    "input" (265) 11 54
    "choice" (266) 35
    "default" (267) 35
    "case" (268) 42 54
    "select" (269) 68
    "all" (270) 67
    "integer number" <std::string> (271) 4
    "double number" <std::string> (272) 5
    "single quoted_string" <std::string> (273) 6
    "double quoted_string" <std::string> (274) 7
    "name" <std::string> (275) 10 14 26 29 30 31 32 35 36 37 38 42 50 66 68
    "option" <std::string> (276) 24 25


Nonterminals, with rules where they appear

    $accept (22)
        on left: 0
    Script (23)
        on left: 3
        on right: 0
    $@1 (24)
        on left: 1
        on right: 3
    $@2 (25)
        on left: 2
        on right: 3
    Number <std::string> (26)
        on left: 4 5
        on right: 27 31 32
    SingleString <std::string> (27)
        on left: 6 7
        on right: 8 9
    String <std::string> (28)
        on left: 8 9
        on right: 9 15 28
    Service (29)
        on left: 10
        on right: 3
    Input (30)
        on left: 11
        on right: 3
    InputSourcesSeq (31)
        on left: 12 13
        on right: 11 13
    InputSource (32)
        on left: 14 15
        on right: 12 13
    OptionalScriptElementsSeq (33)
        on left: 16 17
        on right: 3 49 61
    ScriptElementsSeq (34)
        on left: 18 19
        on right: 16 19
    ScriptElement (35)
        on left: 20 21 22 23
        on right: 18 19
    Option (36)
        on left: 24 25
        on right: 20
    OptionValue <std::string> (37)
        on left: 26 27 28 29 30 31 32
        on right: 25
    ChoiceDeclaration (38)
        on left: 35
        on right: 21
    $@3 (39)
        on left: 33
        on right: 35
    $@4 (40)
        on left: 34
        on right: 35
    ChoiceLabels (41)
        on left: 36 37
        on right: 35 37
    CaseChoiceLabel (42)
        on left: 38
        on right: 39 40
    CaseChoiceLabelsSeq (43)
        on left: 39 40
        on right: 40 49
    CaseChoiceStatement (44)
        on left: 42
        on right: 22
    $@5 (45)
        on left: 41
        on right: 42
    OptionalCaseChoiceAlternativesSeq (46)
        on left: 43 44
        on right: 42
    CaseChoiceAlternativesSeq (47)
        on left: 45 46
        on right: 43 46
    CaseChoiceAlternative (48)
        on left: 49
        on right: 45 46
    $@6 (49)
        on left: 47
        on right: 49
    $@7 (50)
        on left: 48
        on right: 49
    CaseInputName (51)
        on left: 50
        on right: 51 52
    CaseInputNamesSeq (52)
        on left: 51 52
        on right: 52 61
    CaseInputStatement (53)
        on left: 54
        on right: 23
    $@8 (54)
        on left: 53
        on right: 54
    OptionalCaseInputAlternativesSeq (55)
        on left: 55 56
        on right: 54
    CaseInputAlternativesSeq (56)
        on left: 57 58
        on right: 55 58
    CaseInputAlternative (57)
        on left: 61
        on right: 57 58
    $@9 (58)
        on left: 59
        on right: 61
    $@10 (59)
        on left: 60
        on right: 61
    OptionalSelectStatements (60)
        on left: 62 63
        on right: 3
    SelectStatementSeq (61)
        on left: 64 65
        on right: 62 65
    LabelName <std::string> (62)
        on left: 66 67
        on right: 68
    SelectStatement (63)
        on left: 68
        on right: 64 65


State 0

    0 $accept: • Script $end

    "service"  shift, and go to state 1

    Script   go to state 2
    Service  go to state 3


State 1

   10 Service: "service" • ":" "name" ";"

    ":"  shift, and go to state 4


State 2

    0 $accept: Script • $end

    $end  shift, and go to state 5


State 3

    3 Script: Service • Input $@1 OptionalScriptElementsSeq $@2 OptionalSelectStatements

    "input"  shift, and go to state 6

    Input  go to state 7


State 4

   10 Service: "service" ":" • "name" ";"

    "name"  shift, and go to state 8


State 5

    0 $accept: Script $end •

    $default  accept


State 6

   11 Input: "input" • ":" InputSourcesSeq ";"

    ":"  shift, and go to state 9


State 7

    3 Script: Service Input • $@1 OptionalScriptElementsSeq $@2 OptionalSelectStatements

    $default  reduce using rule 1 ($@1)

    $@1  go to state 10


State 8

   10 Service: "service" ":" "name" • ";"

    ";"  shift, and go to state 11


State 9

   11 Input: "input" ":" • InputSourcesSeq ";"

    "single quoted_string"  shift, and go to state 12
    "double quoted_string"  shift, and go to state 13
    "name"                  shift, and go to state 14

    SingleString     go to state 15
    String           go to state 16
    InputSourcesSeq  go to state 17
    InputSource      go to state 18


State 10

    3 Script: Service Input $@1 • OptionalScriptElementsSeq $@2 OptionalSelectStatements

    "choice"  shift, and go to state 19
    "case"    shift, and go to state 20
    "option"  shift, and go to state 21

    $default  reduce using rule 17 (OptionalScriptElementsSeq)

    OptionalScriptElementsSeq  go to state 22
    ScriptElementsSeq          go to state 23
    ScriptElement              go to state 24
    Option                     go to state 25
    ChoiceDeclaration          go to state 26
    CaseChoiceStatement        go to state 27
    CaseInputStatement         go to state 28


State 11

   10 Service: "service" ":" "name" ";" •

    $default  reduce using rule 10 (Service)


State 12

    6 SingleString: "single quoted_string" •

    $default  reduce using rule 6 (SingleString)


State 13

    7 SingleString: "double quoted_string" •

    $default  reduce using rule 7 (SingleString)


State 14

   14 InputSource: "name" •

    $default  reduce using rule 14 (InputSource)


State 15

    8 String: SingleString •

    $default  reduce using rule 8 (String)


State 16

    9 String: String • SingleString
   15 InputSource: String •

    "single quoted_string"  shift, and go to state 12
    "double quoted_string"  shift, and go to state 13

    $default  reduce using rule 15 (InputSource)

    SingleString  go to state 29


State 17

   11 Input: "input" ":" InputSourcesSeq • ";"
   13 InputSourcesSeq: InputSourcesSeq • "&" InputSource

    "&"  shift, and go to state 30
    ";"  shift, and go to state 31


State 18

   12 InputSourcesSeq: InputSource •

    $default  reduce using rule 12 (InputSourcesSeq)


State 19

   35 ChoiceDeclaration: "choice" • "name" ":" $@3 ChoiceLabels "," "default" ":" "name" $@4 ";"

    "name"  shift, and go to state 32


State 20

   42 CaseChoiceStatement: "case" • "name" ":" $@5 OptionalCaseChoiceAlternativesSeq ";"
   54 CaseInputStatement: "case" • "input" ":" $@8 OptionalCaseInputAlternativesSeq ";"

    "input"  shift, and go to state 33
    "name"   shift, and go to state 34


State 21

   24 Option: "option" •
   25       | "option" • OptionValue

    "integer number"        shift, and go to state 35
    "double number"         shift, and go to state 36
    "single quoted_string"  shift, and go to state 12
    "double quoted_string"  shift, and go to state 13
    "name"                  shift, and go to state 37

    $default  reduce using rule 24 (Option)

    Number        go to state 38
    SingleString  go to state 15
    String        go to state 39
    OptionValue   go to state 40


State 22

    3 Script: Service Input $@1 OptionalScriptElementsSeq • $@2 OptionalSelectStatements

    $default  reduce using rule 2 ($@2)

    $@2  go to state 41


State 23

   16 OptionalScriptElementsSeq: ScriptElementsSeq •
   19 ScriptElementsSeq: ScriptElementsSeq • ScriptElement

    "choice"  shift, and go to state 19
    "case"    shift, and go to state 20
    "option"  shift, and go to state 21

    $default  reduce using rule 16 (OptionalScriptElementsSeq)

    ScriptElement        go to state 42
    Option               go to state 25
    ChoiceDeclaration    go to state 26
    CaseChoiceStatement  go to state 27
    CaseInputStatement   go to state 28


State 24

   18 ScriptElementsSeq: ScriptElement •

    $default  reduce using rule 18 (ScriptElementsSeq)


State 25

   20 ScriptElement: Option •

    $default  reduce using rule 20 (ScriptElement)


State 26

   21 ScriptElement: ChoiceDeclaration •

    $default  reduce using rule 21 (ScriptElement)


State 27

   22 ScriptElement: CaseChoiceStatement •

    $default  reduce using rule 22 (ScriptElement)


State 28

   23 ScriptElement: CaseInputStatement •

    $default  reduce using rule 23 (ScriptElement)


State 29

    9 String: String SingleString •

    $default  reduce using rule 9 (String)


State 30

   13 InputSourcesSeq: InputSourcesSeq "&" • InputSource

    "single quoted_string"  shift, and go to state 12
    "double quoted_string"  shift, and go to state 13
    "name"                  shift, and go to state 14

    SingleString  go to state 15
    String        go to state 16
    InputSource   go to state 43


State 31

   11 Input: "input" ":" InputSourcesSeq ";" •

    $default  reduce using rule 11 (Input)


State 32

   35 ChoiceDeclaration: "choice" "name" • ":" $@3 ChoiceLabels "," "default" ":" "name" $@4 ";"

    ":"  shift, and go to state 44


State 33

   54 CaseInputStatement: "case" "input" • ":" $@8 OptionalCaseInputAlternativesSeq ";"

    ":"  shift, and go to state 45


State 34

   42 CaseChoiceStatement: "case" "name" • ":" $@5 OptionalCaseChoiceAlternativesSeq ";"

    ":"  shift, and go to state 46


State 35

    4 Number: "integer number" •

    $default  reduce using rule 4 (Number)


State 36

    5 Number: "double number" •

    $default  reduce using rule 5 (Number)


State 37

   26 OptionValue: "name" •
   29            | "name" • "=" "name"
   30            | "name" • ":" "name"
   31            | "name" • "=" Number
   32            | "name" • ":" Number

    "="  shift, and go to state 47
    ":"  shift, and go to state 48

    $default  reduce using rule 26 (OptionValue)


State 38

   27 OptionValue: Number •

    $default  reduce using rule 27 (OptionValue)


State 39

    9 String: String • SingleString
   28 OptionValue: String •

    "single quoted_string"  shift, and go to state 12
    "double quoted_string"  shift, and go to state 13

    $default  reduce using rule 28 (OptionValue)

    SingleString  go to state 29


State 40

   25 Option: "option" OptionValue •

    $default  reduce using rule 25 (Option)


State 41

    3 Script: Service Input $@1 OptionalScriptElementsSeq $@2 • OptionalSelectStatements

    "select"  shift, and go to state 49

    $default  reduce using rule 63 (OptionalSelectStatements)

    OptionalSelectStatements  go to state 50
    SelectStatementSeq        go to state 51
    SelectStatement           go to state 52


State 42

   19 ScriptElementsSeq: ScriptElementsSeq ScriptElement •

    $default  reduce using rule 19 (ScriptElementsSeq)


State 43

   13 InputSourcesSeq: InputSourcesSeq "&" InputSource •

    $default  reduce using rule 13 (InputSourcesSeq)


State 44

   35 ChoiceDeclaration: "choice" "name" ":" • $@3 ChoiceLabels "," "default" ":" "name" $@4 ";"

    $default  reduce using rule 33 ($@3)

    $@3  go to state 53


State 45

   54 CaseInputStatement: "case" "input" ":" • $@8 OptionalCaseInputAlternativesSeq ";"

    $default  reduce using rule 53 ($@8)

    $@8  go to state 54


State 46

   42 CaseChoiceStatement: "case" "name" ":" • $@5 OptionalCaseChoiceAlternativesSeq ";"

    $default  reduce using rule 41 ($@5)

    $@5  go to state 55


State 47

   29 OptionValue: "name" "=" • "name"
   31            | "name" "=" • Number

    "integer number"  shift, and go to state 35
    "double number"   shift, and go to state 36
    "name"            shift, and go to state 56

    Number  go to state 57


State 48

   30 OptionValue: "name" ":" • "name"
   32            | "name" ":" • Number

    "integer number"  shift, and go to state 35
    "double number"   shift, and go to state 36
    "name"            shift, and go to state 58

    Number  go to state 59


State 49

   68 SelectStatement: "select" • "name" ":" LabelName ";"

    "name"  shift, and go to state 60


State 50

    3 Script: Service Input $@1 OptionalScriptElementsSeq $@2 OptionalSelectStatements •

    $default  reduce using rule 3 (Script)


State 51

   62 OptionalSelectStatements: SelectStatementSeq •
   65 SelectStatementSeq: SelectStatementSeq • SelectStatement

    "select"  shift, and go to state 49

    $default  reduce using rule 62 (OptionalSelectStatements)

    SelectStatement  go to state 61


State 52

   64 SelectStatementSeq: SelectStatement •

    $default  reduce using rule 64 (SelectStatementSeq)


State 53

   35 ChoiceDeclaration: "choice" "name" ":" $@3 • ChoiceLabels "," "default" ":" "name" $@4 ";"

    "name"  shift, and go to state 62

    ChoiceLabels  go to state 63


State 54

   54 CaseInputStatement: "case" "input" ":" $@8 • OptionalCaseInputAlternativesSeq ";"

    "name"    reduce using rule 59 ($@9)
    $default  reduce using rule 56 (OptionalCaseInputAlternativesSeq)

    OptionalCaseInputAlternativesSeq  go to state 64
    CaseInputAlternativesSeq          go to state 65
    CaseInputAlternative              go to state 66
    $@9                               go to state 67


State 55

   42 CaseChoiceStatement: "case" "name" ":" $@5 • OptionalCaseChoiceAlternativesSeq ";"

    "name"    reduce using rule 47 ($@6)
    $default  reduce using rule 44 (OptionalCaseChoiceAlternativesSeq)

    OptionalCaseChoiceAlternativesSeq  go to state 68
    CaseChoiceAlternativesSeq          go to state 69
    CaseChoiceAlternative              go to state 70
    $@6                                go to state 71


State 56

   29 OptionValue: "name" "=" "name" •

    $default  reduce using rule 29 (OptionValue)


State 57

   31 OptionValue: "name" "=" Number •

    $default  reduce using rule 31 (OptionValue)


State 58

   30 OptionValue: "name" ":" "name" •

    $default  reduce using rule 30 (OptionValue)


State 59

   32 OptionValue: "name" ":" Number •

    $default  reduce using rule 32 (OptionValue)


State 60

   68 SelectStatement: "select" "name" • ":" LabelName ";"

    ":"  shift, and go to state 72


State 61

   65 SelectStatementSeq: SelectStatementSeq SelectStatement •

    $default  reduce using rule 65 (SelectStatementSeq)


State 62

   36 ChoiceLabels: "name" •

    $default  reduce using rule 36 (ChoiceLabels)


State 63

   35 ChoiceDeclaration: "choice" "name" ":" $@3 ChoiceLabels • "," "default" ":" "name" $@4 ";"
   37 ChoiceLabels: ChoiceLabels • "|" "name"

    "|"  shift, and go to state 73
    ","  shift, and go to state 74


State 64

   54 CaseInputStatement: "case" "input" ":" $@8 OptionalCaseInputAlternativesSeq • ";"

    ";"  shift, and go to state 75


State 65

   55 OptionalCaseInputAlternativesSeq: CaseInputAlternativesSeq •
   58 CaseInputAlternativesSeq: CaseInputAlternativesSeq • CaseInputAlternative

    "name"    reduce using rule 59 ($@9)
    $default  reduce using rule 55 (OptionalCaseInputAlternativesSeq)

    CaseInputAlternative  go to state 76
    $@9                   go to state 67


State 66

   57 CaseInputAlternativesSeq: CaseInputAlternative •

    $default  reduce using rule 57 (CaseInputAlternativesSeq)


State 67

   61 CaseInputAlternative: $@9 • CaseInputNamesSeq ":" $@10 OptionalScriptElementsSeq ";"

    "name"  shift, and go to state 77

    CaseInputName      go to state 78
    CaseInputNamesSeq  go to state 79


State 68

   42 CaseChoiceStatement: "case" "name" ":" $@5 OptionalCaseChoiceAlternativesSeq • ";"

    ";"  shift, and go to state 80


State 69

   43 OptionalCaseChoiceAlternativesSeq: CaseChoiceAlternativesSeq •
   46 CaseChoiceAlternativesSeq: CaseChoiceAlternativesSeq • CaseChoiceAlternative

    "name"    reduce using rule 47 ($@6)
    $default  reduce using rule 43 (OptionalCaseChoiceAlternativesSeq)

    CaseChoiceAlternative  go to state 81
    $@6                    go to state 71


State 70

   45 CaseChoiceAlternativesSeq: CaseChoiceAlternative •

    $default  reduce using rule 45 (CaseChoiceAlternativesSeq)


State 71

   49 CaseChoiceAlternative: $@6 • CaseChoiceLabelsSeq ":" $@7 OptionalScriptElementsSeq ";"

    "name"  shift, and go to state 82

    CaseChoiceLabel      go to state 83
    CaseChoiceLabelsSeq  go to state 84


State 72

   68 SelectStatement: "select" "name" ":" • LabelName ";"

    "all"   shift, and go to state 85
    "name"  shift, and go to state 86

    LabelName  go to state 87


State 73

   37 ChoiceLabels: ChoiceLabels "|" • "name"

    "name"  shift, and go to state 88


State 74

   35 ChoiceDeclaration: "choice" "name" ":" $@3 ChoiceLabels "," • "default" ":" "name" $@4 ";"

    "default"  shift, and go to state 89


State 75

   54 CaseInputStatement: "case" "input" ":" $@8 OptionalCaseInputAlternativesSeq ";" •

    $default  reduce using rule 54 (CaseInputStatement)


State 76

   58 CaseInputAlternativesSeq: CaseInputAlternativesSeq CaseInputAlternative •

    $default  reduce using rule 58 (CaseInputAlternativesSeq)


State 77

   50 CaseInputName: "name" •

    $default  reduce using rule 50 (CaseInputName)


State 78

   51 CaseInputNamesSeq: CaseInputName •

    $default  reduce using rule 51 (CaseInputNamesSeq)


State 79

   52 CaseInputNamesSeq: CaseInputNamesSeq • "," CaseInputName
   61 CaseInputAlternative: $@9 CaseInputNamesSeq • ":" $@10 OptionalScriptElementsSeq ";"

    ":"  shift, and go to state 90
    ","  shift, and go to state 91


State 80

   42 CaseChoiceStatement: "case" "name" ":" $@5 OptionalCaseChoiceAlternativesSeq ";" •

    $default  reduce using rule 42 (CaseChoiceStatement)


State 81

   46 CaseChoiceAlternativesSeq: CaseChoiceAlternativesSeq CaseChoiceAlternative •

    $default  reduce using rule 46 (CaseChoiceAlternativesSeq)


State 82

   38 CaseChoiceLabel: "name" •

    $default  reduce using rule 38 (CaseChoiceLabel)


State 83

   39 CaseChoiceLabelsSeq: CaseChoiceLabel •

    $default  reduce using rule 39 (CaseChoiceLabelsSeq)


State 84

   40 CaseChoiceLabelsSeq: CaseChoiceLabelsSeq • "," CaseChoiceLabel
   49 CaseChoiceAlternative: $@6 CaseChoiceLabelsSeq • ":" $@7 OptionalScriptElementsSeq ";"

    ":"  shift, and go to state 92
    ","  shift, and go to state 93


State 85

   67 LabelName: "all" •

    $default  reduce using rule 67 (LabelName)


State 86

   66 LabelName: "name" •

    $default  reduce using rule 66 (LabelName)


State 87

   68 SelectStatement: "select" "name" ":" LabelName • ";"

    ";"  shift, and go to state 94


State 88

   37 ChoiceLabels: ChoiceLabels "|" "name" •

    $default  reduce using rule 37 (ChoiceLabels)


State 89

   35 ChoiceDeclaration: "choice" "name" ":" $@3 ChoiceLabels "," "default" • ":" "name" $@4 ";"

    ":"  shift, and go to state 95


State 90

   61 CaseInputAlternative: $@9 CaseInputNamesSeq ":" • $@10 OptionalScriptElementsSeq ";"

    $default  reduce using rule 60 ($@10)

    $@10  go to state 96


State 91

   52 CaseInputNamesSeq: CaseInputNamesSeq "," • CaseInputName

    "name"  shift, and go to state 77

    CaseInputName  go to state 97


State 92

   49 CaseChoiceAlternative: $@6 CaseChoiceLabelsSeq ":" • $@7 OptionalScriptElementsSeq ";"

    $default  reduce using rule 48 ($@7)

    $@7  go to state 98


State 93

   40 CaseChoiceLabelsSeq: CaseChoiceLabelsSeq "," • CaseChoiceLabel

    "name"  shift, and go to state 82

    CaseChoiceLabel  go to state 99


State 94

   68 SelectStatement: "select" "name" ":" LabelName ";" •

    $default  reduce using rule 68 (SelectStatement)


State 95

   35 ChoiceDeclaration: "choice" "name" ":" $@3 ChoiceLabels "," "default" ":" • "name" $@4 ";"

    "name"  shift, and go to state 100


State 96

   61 CaseInputAlternative: $@9 CaseInputNamesSeq ":" $@10 • OptionalScriptElementsSeq ";"

    "choice"  shift, and go to state 19
    "case"    shift, and go to state 20
    "option"  shift, and go to state 21

    $default  reduce using rule 17 (OptionalScriptElementsSeq)

    OptionalScriptElementsSeq  go to state 101
    ScriptElementsSeq          go to state 23
    ScriptElement              go to state 24
    Option                     go to state 25
    ChoiceDeclaration          go to state 26
    CaseChoiceStatement        go to state 27
    CaseInputStatement         go to state 28


State 97

   52 CaseInputNamesSeq: CaseInputNamesSeq "," CaseInputName •

    $default  reduce using rule 52 (CaseInputNamesSeq)


State 98

   49 CaseChoiceAlternative: $@6 CaseChoiceLabelsSeq ":" $@7 • OptionalScriptElementsSeq ";"

    "choice"  shift, and go to state 19
    "case"    shift, and go to state 20
    "option"  shift, and go to state 21

    $default  reduce using rule 17 (OptionalScriptElementsSeq)

    OptionalScriptElementsSeq  go to state 102
    ScriptElementsSeq          go to state 23
    ScriptElement              go to state 24
    Option                     go to state 25
    ChoiceDeclaration          go to state 26
    CaseChoiceStatement        go to state 27
    CaseInputStatement         go to state 28


State 99

   40 CaseChoiceLabelsSeq: CaseChoiceLabelsSeq "," CaseChoiceLabel •

    $default  reduce using rule 40 (CaseChoiceLabelsSeq)


State 100

   35 ChoiceDeclaration: "choice" "name" ":" $@3 ChoiceLabels "," "default" ":" "name" • $@4 ";"

    $default  reduce using rule 34 ($@4)

    $@4  go to state 103


State 101

   61 CaseInputAlternative: $@9 CaseInputNamesSeq ":" $@10 OptionalScriptElementsSeq • ";"

    ";"  shift, and go to state 104


State 102

   49 CaseChoiceAlternative: $@6 CaseChoiceLabelsSeq ":" $@7 OptionalScriptElementsSeq • ";"

    ";"  shift, and go to state 105


State 103

   35 ChoiceDeclaration: "choice" "name" ":" $@3 ChoiceLabels "," "default" ":" "name" $@4 • ";"

    ";"  shift, and go to state 106


State 104

   61 CaseInputAlternative: $@9 CaseInputNamesSeq ":" $@10 OptionalScriptElementsSeq ";" •

    $default  reduce using rule 61 (CaseInputAlternative)


State 105

   49 CaseChoiceAlternative: $@6 CaseChoiceLabelsSeq ":" $@7 OptionalScriptElementsSeq ";" •

    $default  reduce using rule 49 (CaseChoiceAlternative)


State 106

   35 ChoiceDeclaration: "choice" "name" ":" $@3 ChoiceLabels "," "default" ":" "name" $@4 ";" •

    $default  reduce using rule 35 (ChoiceDeclaration)
